--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,6 +17,11 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:id="@+id/gradback"
+                android:background="@drawable/gradient"/>
+            <ImageView
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/oval"
                 android:layout_centerHorizontal="true"
@@ -80,7 +85,7 @@
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:padding="5dp"
-                      android:layout_marginLeft="40dp">
+                      android:layout_marginLeft="30dp">
                   <ImageView
                       android:layout_width="60dp"
                       android:layout_height="60dp"
@@ -104,16 +109,23 @@
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:padding="5dp"
-                      android:layout_marginLeft="40dp">
-                      <ImageView
+                      android:layout_marginLeft="30dp">
+                      <de.hdodenhof.circleimageview.CircleImageView
+                          xmlns:app="http://schemas.android.com/apk/res-auto"
+                          android:id="@+id/monuments"
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:src="@drawable/tajmahal"
-                          android:id="@+id/monuments"/>
+                          app:civ_border_width="2dp"
+                          app:civ_border_color="@color/background"
+                          android:layout_marginLeft="10dp"
+                          android:layout_centerHorizontal="true"
+                          />
+
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
-                          android:text="Religious"
+                          android:text="Monuments"
                           android:textColor="@color/white"
                           android:layout_marginTop="2dp"
                           android:id="@+id/monumentstext"
@@ -128,7 +140,7 @@
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:padding="5dp"
-                      android:layout_marginLeft="40dp"
+                      android:layout_marginLeft="30dp"
                       android:layout_gravity="center"
                       >
                       <ImageView
