--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -10,34 +10,35 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:background="@drawable/gradient"/>
-
-    <!-- TODO: Update blank fragment layout -->
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/traveltab"
-        android:background="@color/orange"
-        app:tabIndicatorColor="@color/black"
-        >
+        app:tabTextColor="@color/white"
+        app:tabIndicatorColor="@color/black">
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:text="Flight"
             />
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Train"
+            />
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Bus"/>
         <android.support.design.widget.TabItem
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Taxi"/>
     </android.support.design.widget.TabLayout>
-    <android.support.v4.view.ViewPager
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/traveltab"
-        android:id="@+id/vptravel">
-    </android.support.v4.view.ViewPager>
+
+
+
+
+    <!-- TODO: Update blank fragment layout -->
+
 
 </RelativeLayout>
