--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -56,7 +56,7 @@
         android:text="Username"
         android:layout_below="@id/profile_image"
         android:textSize="20dp"
-        android:textColor="#000"
+        android:textColor="@color/white"
         android:gravity="center"
         android:layout_alignLeft="@id/profile_image"
         android:paddingLeft="5dp"
@@ -70,7 +70,7 @@
             android:layout_toRightOf="@id/userrelative"
             android:paddingTop="30dp"
             android:layout_marginLeft="30dp"
-            android:id="@+id/likesreltive"
+            android:id="@+id/placevisitrelative"
             >
 
 
@@ -93,7 +93,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="15dp"
                 android:layout_below="@id/likes"
-                android:textColor="#000"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:paddingLeft="10dp"/>
 
@@ -101,11 +101,11 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/likesreltive"
+            android:layout_toRightOf="@id/placevisitrelative"
             android:paddingTop="30dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:id="@+id/placevisitrelative"
+            android:id="@+id/likerelative"
 
             >
 
@@ -129,7 +129,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="15dp"
                 android:layout_below="@id/placesvisit"
-                android:textColor="#000"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:paddingLeft="10dp"/>
 
@@ -137,7 +137,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/placevisitrelative"
+            android:layout_toRightOf="@id/likerelative"
             android:paddingTop="30dp"
             android:id="@+id/reviewrelative"
             >
@@ -160,7 +160,7 @@
                 android:layout_centerHorizontal="true"
                 android:textSize="15dp"
                 android:layout_below="@id/reviews"
-                android:textColor="#000"
+                android:textColor="@color/white"
                 android:gravity="center"
                 android:paddingLeft="10dp"/>
 
@@ -171,15 +171,17 @@
             android:layout_below="@id/placevisitrelative"
             android:paddingTop="10dp"
             android:layout_centerHorizontal="true"
-            android:paddingLeft="120dp"
+            android:layout_alignLeft="@id/placevisitrelative"
+
             >
             <Button
                 android:layout_width="250dp"
                 android:layout_height="35dp"
                 android:text="Edit Profile"
                 android:gravity="center"
-                android:background="@color/background"
-                android:textColor="@color/orange"/>
+                android:background="@color/white"
+                android:textColor="@color/orange"
+                />
 
 
         </RelativeLayout>
