--- a/app/src/main/res/layout-v21/activity_settings.xml
+++ b/app/src/main/res/layout-v21/activity_settings.xml
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/UserName"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
         android:orientation="vertical"
         android:paddingLeft="30dp"
         android:id="@+id/settingslinear">
@@ -144,7 +144,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="10dp"
-                android:text="Booking and Trips"
+                android:text="Bookmarks"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:paddingLeft="10dp"/>
@@ -226,6 +226,8 @@
 
 
 
+
+
         </LinearLayout>
 
 
@@ -234,12 +236,23 @@
 
 
 
+
     </LinearLayout>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/gradientopposite"
+        android:text="Logout"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/settingslinear"
+        android:id="@+id/logout"/>
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:src="@drawable/traveloidsmall"
-        android:layout_below="@id/settingslinear"
+        android:layout_below="@id/logout"
         android:layout_centerHorizontal="true"
         android:id="@+id/smallLabel"/>
     <TextView
