--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -82,9 +82,8 @@
             android:textSize="19dp"
             android:paddingBottom="2dp"
             android:layout_centerHorizontal="true"
-            android:background="@drawable/text_outline"
-            android:backgroundTint="@color/white"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:backgroundTint="@color/black"/>
     </RelativeLayout>
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -110,9 +109,8 @@
                 android:textSize="19dp"
                 android:paddingBottom="2dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/text_outline"
-                android:backgroundTint="@color/white"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:backgroundTint="@color/black"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -138,9 +136,8 @@
                 android:textSize="19dp"
                 android:paddingBottom="2dp"
                 android:layout_centerHorizontal="true"
-                android:background="@drawable/text_outline"
-                android:backgroundTint="@color/white"
                 android:gravity="center"
+                android:backgroundTint="@color/black"
                 />
         </RelativeLayout>
 
