--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -8,8 +8,8 @@
     android:background="@color/background">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/logindesign" />
+        android:layout_height="300dp"
+        android:background="@drawable/gradient" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
