--- a/app/src/main/res/layout/activity_singnup.xml
+++ b/app/src/main/res/layout/activity_singnup.xml
@@ -8,51 +8,56 @@
     android:background="@color/background">
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/logindesign"
+        android:layout_height="300dp"
+        android:background="@drawable/gradient"
         android:id="@+id/signupdesign"/>
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <TextView
         android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:text="Create Account"
+        android:textSize="30sp"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:id="@+id/createtittle"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/background"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:titleTextColor="@color/white"
-        app:title="CREATE ACCOUNT"
-        app:titleMarginStart="30dp"
-        />
+        android:layout_below="@+id/createtittle"
+        android:layout_centerHorizontal="true"
+        android:paddingTop="50dp">
+
 
     <EditText
-        android:layout_below="@+id/signupdesign"
+
         android:id="@+id/firstname"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:hint="Fisrt name"
-        android:layout_marginLeft="30dp"
-        android:textColorHint="@color/gray"
-        android:backgroundTint="@color/orange"
+        android:layout_marginLeft="0dp"
+        android:textColorHint="@color/white"
+        android:backgroundTint="@color/black"
         android:textColor="@color/white"
-        android:textSize="20dp"/>
+        android:textSize="20dp"
+        android:layout_alignParentLeft="true"/>
     <EditText
         android:id="@+id/lastname"
         android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/firstname"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/black"
         android:layout_alignTop="@+id/firstname"
         android:hint="Last name"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:textSize="20dp"/>
     <EditText
-        android:layout_width="350dp"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/firstname"
-        android:layout_centerInParent="true"
-        android:backgroundTint="@color/orange"
+        android:layout_alignParentLeft="true"
+        android:backgroundTint="@color/black"
         android:hint="Email Address:example@mail.com"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/white"
         android:textSize="20dp"
         android:textColor="@color/white"
         android:id="@+id/email"
@@ -65,7 +70,7 @@
         android:layout_height="wrap_content"
         android:text="+91"
         android:textColor="@color/white"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/black"
         android:textSize="20dp"
         android:layout_alignLeft="@id/email"
         android:id="@+id/spin"
@@ -81,9 +86,9 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="phone"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/black"
         android:hint="Phone number"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/white"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:layout_below="@id/email"
@@ -95,9 +100,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/black"
         android:hint="Create password"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/white"
         android:textSize="20dp"
         android:textColor="@color/white"
         android:layout_below="@id/spin"
@@ -109,9 +114,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="15"
-        android:backgroundTint="@color/orange"
+        android:backgroundTint="@color/black"
         android:hint="Re-enter password"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/white"
         android:textSize="20dp"
         android:textColor="@color/white"
         android:layout_below="@id/password"
@@ -138,6 +143,7 @@
         android:layout_below="@id/createaccount"
         android:layout_centerInParent="true"
         android:layout_marginTop="20dp"/>
+    </RelativeLayout>
 
 
 </RelativeLayout>
