--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,8 +66,8 @@
                           android:layout_width="60dp"
                           android:layout_height="60dp"
                           android:layout_marginLeft="10dp"
-                          android:onClick="something"
-                          android:src="@drawable/adventure" />
+                          android:src="@drawable/adventure"
+                          android:clickable="true"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
