--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -7,36 +7,50 @@
     tools:context=".homepage"
     android:background="@color/background"
     >
+    <TextView
+        android:layout_width="20dp"
+        android:layout_height="75dp"
+        android:layout_alignParentLeft="true"
+        android:id="@+id/cardtext"
+        android:background="@color/black"
+        />
+    <ImageView
+        android:layout_width="20dp"
+        android:layout_height="75dp"
+        android:src="@drawable/card"
+        android:layout_alignParentLeft="true"
+        android:clickable="true"
+        />
+
 
     <Toolbar
         android:id="@+id/hometool"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
         android:background="#000"
-
+        android:layout_toRightOf="@id/cardtext"
         >
-
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
         <ImageView
             android:id="@+id/hometitle"
             android:layout_width="120dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             android:padding="5dp"
             android:src="@drawable/traveloidsmall" />
 
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginRight="0dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="22dp"
-            android:layout_marginLeft="190dp"
             android:clickable="true"
             android:onClick="search"
             android:padding="5dp"
-            android:src="@drawable/search" />
+            android:src="@drawable/search"
+            android:layout_toLeftOf="@id/settingicon"/>
         <ImageView
             android:layout_width="37dp"
             android:layout_height="37dp"
@@ -44,10 +58,12 @@
             android:padding="5dp"
             android:clickable="true"
             android:layout_marginTop="22dp"
-            android:layout_marginLeft="10dp"
             android:onClick="settings"
-
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:id="@+id/settingicon"
             />
+        </RelativeLayout>
 
     </Toolbar>
     <android.support.design.widget.TabLayout
