--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/socialprofile"
         android:text="Social Profile"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="30dp"
         android:gravity="center"
         android:background="@color/orange"
