--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,8 +33,8 @@
                 android:textSize="20dp"/>
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/oval"
+                android:layout_height="200dp"
+                android:src="@drawable/add"
                 android:layout_centerHorizontal="true"
                 android:padding="15dp"
                 android:id="@+id/ad1"
